--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme
+
+navigation:
+- title: "Home"
+  url: "/"
+- title: "Constellate"
+  url: "/Constellate/"
