add base layout for new nav bar

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,5 @@ remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme
 
-navigation:
-- title: "Home"
-  url: "/"
-- title: "Constellate"
-  url: "/Constellate/"
+mine:
+  current: "/Constellate"
